Minor refactor to remove redundant classes/objects